--- a/config.conf
+++ b/config.conf
@@ -1,13 +1,14 @@
 {
-"page_line_number": 10, # 单页显示行数
+"line_number": 10, # 单页显示行数
 "up": "m",  # 向上翻页
 "down": "", # 向下翻页
 "check": "c", # 主页面
 "quite": "n",  # 退出
-"show_book": "b", # 书列表
-"show_mark": "a", # 标签列表
-"show_cha": "z", # 章节列表
+"book": "b", # 书列表
+"mark": "a", # 标签列表
+"chapters": "z", # 章节列表
 "cha": "章",  # 图书章节读取后缀
 "add": "t",  # 添加书签
+"input_cha": "i",
 "color": "31" # 颜色 30 黑色 31 红色 32 绿色 33 黄色 34 蓝色 35 紫红色 36 青蓝色 37 白色
 }
